# painlessMesh-simulator

./: .dockerignore  .gitignore  .gitmodules  ACTION_REQUIRED.md  BUILD_WINDOWS_STATUS.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT_STATUS.md  Dockerfile  FIRMWARE_TESTING_SOLUTION.md  GETTING_STARTED.md  ISSUES_TO_CREATE.md  ISSUE_138_SUMMARY.md  ISSUE_138_VALIDATION.md  QUICK_ISSUE_CREATION.md  README.md  SECURITY.md  SETUP_COMPLETE.md  SIMULATOR_INDEX.md  SIMULATOR_PLAN.md  WINDOWS_FIXES_NEEDED.md  docker-compose.yml  docker-quickstart.ps1  docker-quickstart.sh  vcpkg.json
.github/: AGENT_SESSION_TEMPLATE.md  MCP_CONFIGURATION.md  MCP_QUICK_REFERENCE.md  MCP_UPDATE_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ISSUE_TEMPLATES_PHASE1/: 01-add-painlessmesh-submodule.md  02-implement-virtualnode-class.md  03-implement-nodemanager-class.md  04-implement-config-loader.md  05-implement-cli-application.md  README.md
.github/agents/: cpp-simulator-agent.md  documentation-agent.md  firmware-integration-agent.md  scenario-config-agent.md
.github/workflows/: README.md  ci-docker.yml  ci.yml
_codeql_build_dir/: Makefile
docker/: Dockerfile.dev  Dockerfile.linux-build  Dockerfile.windows  Dockerfile.windows-cross  README.md  WINDOWS_BUILD_FIX.md  build-linux.sh  build-windows.sh  docker-compose.windows.yml  test.sh
docs/: BANDWIDTH_LIMITING.md  BRIDGE_TESTING_GUIDE.md  CONFIGURATION_GUIDE.md  CONNECTION_EVENTS.md  CUSTOM_EVENTS.md  DOCKER_GUIDE.md  DOCKER_SOLUTION_SUMMARY.md  FIRMWARE_DEVELOPMENT_GUIDE.md  FIRMWARE_INTEGRATION.md  FIRMWARE_INTEGRATION_SUMMARY.md  FIRMWARE_TESTING_GUIDE.md  GITHUB_ISSUES_TEMPLATES.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATING_INTO_YOUR_PROJECT.md  ISSUE_138_ANALYSIS.md  LIBRARY_VALIDATION_PLAN.md  LIBRARY_VALIDATION_QUICK_START.md  LIBRARY_VALIDATION_SUMMARY.md  NETWORK_LATENCY.md  PACKET_LOSS.md  PARTITION_EVENTS.md  PHASE1_STATUS.md  PLATFORM_COMPARISON.md  SETUP_COMPLETE.md  SETUP_SUMMARY.md  SIMULATOR_INDEX.md  SIMULATOR_QUICKSTART.md  SIMULATOR_SUMMARY.md  WINDOWS_BUILD_DECISION.md  WINDOWS_BUILD_GUIDE.md  WINDOWS_BUILD_QUICKSTART.md  WSL2_SETUP_GUIDE.md
examples/: PROJECT_STRUCTURE_EXAMPLES.md  README.md
examples/firmware/: README.md
examples/integration/: README.md
examples/integration/platformio-example/: README.md  platformio.ini
examples/integration/platformio-example/lib/MyMeshApp/: MyMeshApp.cpp  MyMeshApp.h
examples/integration/platformio-example/src/: main.cpp
examples/integration/platformio-example/test/simulator/: CMakeLists.txt
examples/integration/platformio-example/test/simulator/firmware/: my_mesh_app_firmware.cpp  my_mesh_app_firmware.hpp
examples/integration/platformio-example/test/simulator/scenarios/: basic_test.yaml  stress_test.yaml
examples/scenarios/: ISSUE_138_SCENARIOS.md  bandwidth_limiting_test.yaml  bridge_failover_test.yaml  connection_events_test.yaml  firmware_broadcast.yaml  firmware_echo.yaml  issue_138_cascade_healing.yaml  issue_138_message_routing.yaml  issue_138_rapid_partition_cycles.yaml  issue_138_stress_partition.yaml  issue_138_uneven_partitions.yaml  library_validation.yaml  mixed_firmware_test.yaml  network_latency_test.yaml  network_partition_test.yaml  node_lifecycle_test.yaml  packet_loss_test.yaml  simple_firmware_test.yaml  simple_mesh.yaml  split_brain_partition_test.yaml  star_topology.yaml  stress_test.yaml
include/: unistd.h
include/simulator/: cli_options.hpp  config_loader.hpp  event.hpp  event_scheduler.hpp  network_simulator.hpp  node_manager.hpp  platform_compat.hpp  virtual_node.hpp
include/simulator/events/: connection_degrade_event.hpp  connection_drop_event.hpp  connection_restore_event.hpp  network_heal_event.hpp  network_partition_event.hpp  node_crash_event.hpp  node_restart_event.hpp  node_start_event.hpp  node_stop_event.hpp
include/simulator/firmware/: echo_client_firmware.hpp  echo_server_firmware.hpp  firmware_base.hpp  firmware_factory.hpp  ino_firmware_wrapper.hpp  library_validation_firmware.hpp  simple_broadcast_firmware.hpp
include/sys/: time.h
include/windows_compat/: unistd.h
include/windows_compat/sys/: time.h
patches/: painlessmesh_windows_fixes.patch
scripts/: README.md  analyze_issue_138_results.py  build-windows-ci.ps1  create-phase1-issues.sh  run_issue_138_tests.sh  test-gh-auth.sh  verify-windows-prereqs.ps1
src/: main.cpp
src/cli/: cli_parser.cpp
src/config/: config_loader.cpp
src/core/: node_manager.cpp  painlessmesh_support.cpp  virtual_node.cpp
src/firmware/: basic_ino_firmware.cpp  bridge_ino_firmware.cpp  echo_client_firmware.cpp  echo_server_firmware.cpp  firmware_base.cpp  library_validation_firmware.cpp  simple_broadcast_firmware.cpp
src/network/: network_simulator.cpp
src/scenario/: event_scheduler.cpp
src/scenario/events/: connection_degrade_event.cpp  connection_drop_event.cpp  connection_restore_event.cpp  network_heal_event.cpp  network_partition_event.cpp  node_crash_event.cpp  node_restart_event.cpp  node_start_event.cpp  node_stop_event.cpp
test/: test_bridge_internet_detection.cpp  test_cli_parser.cpp  test_config_loader.cpp  test_connection_events.cpp  test_event_scheduler.cpp  test_firmware.cpp  test_network_integration.cpp  test_network_simulator.cpp  test_node_lifecycle.cpp  test_node_manager.cpp  test_partition_events.cpp  test_virtual_node.cpp
